force-app/main/default/objects/Intervention__c/Intervention__c.object-meta.xml
<CustomObject>
    <description>Cet objet permet aux conseiller de consigner leurs actions sur le Case lors d&apos;un traitement Back Office.</description>
    <label>Intervention</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Intervention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interventions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>