force-app/main/default/objects/Intervention__c/fields/Anciennete__c.field-meta.xml
<CustomField>
    <fullName>Anciennete__c</fullName>
    <formula>if((ISPICKVAL( Statut__c , &apos;Clôturé&apos;)), (NOW() - CreatedDate )*24*60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ancienneté</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>