force-app/main/default/objects/Intervention__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>@Description: Liaison de l&apos;intervention avec le case
@Project: Smile</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>