force-app/main/default/objects/Intervention__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liaison de l&apos;intervention avec un contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions_del</relationshipName>
    <type>Lookup</type>
</CustomField>