force-app/main/default/objects/Intervention__c/fields/Date_Cloture__c.field-meta.xml
<CustomField>
    <fullName>Date_Cloture__c</fullName>
    <description>@Description: Ce champ va contenir la date/time à partir duquel l&apos;intervention passe à l&apos;étape &quot;Clôturé OK&quot; oubien &quot;Clôturé KO&quot;
@Project: Smile</description>
    <label>Date Clôturé</label>
    <type>DateTime</type>
</CustomField>