force-app/main/default/objects/Intervention__c/fields/Date_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Date_en_cours__c</fullName>
    <description>@Description: Ce champ va contenir la date/time à partir duquel l&apos;intervention passe à l&apos;étape &quot;En cours&quot;
@Project: Smile</description>
    <label>Date en cours</label>
    <type>DateTime</type>
</CustomField>