force-app/main/default/objects/Intervention__c/fields/Date_OPS__c.field-meta.xml
<CustomField>
    <fullName>Date_OPS__c</fullName>
    <description>@Description: Date de l&apos;OPS d&apos;une intervention
@Project: Smile</description>
    <label>Date de l&apos;OPS</label>
    <type>Date</type>
</CustomField>