force-app/main/default/objects/Intervention__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>@Description: Description de l&apos;intervention
@Project: Smile</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>