force-app/main/default/objects/Intervention__c/fields/Duree_traitement__c.field-meta.xml
<CustomField>
    <fullName>Duree_traitement__c</fullName>
    <description>@Description: Ce champ permet d&apos;identifier la DMT d&apos;une intervention.
@Project: Smile</description>
    <formula>IF(
AND(NOT(ISBLANK( Date_Cloture__c )), NOT(ISBLANK( Date_en_cours__c )),
Date_Cloture__c - Date_en_cours__c &gt; 0), 
TEXT( FLOOR( (Date_Cloture__c - Date_en_cours__c) * 24 ) ) &amp; &quot; heures  &quot; &amp; TEXT( ROUND( MOD( (Date_Cloture__c - Date_en_cours__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
 &quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de traitement</label>
    <type>Text</type>
</CustomField>