force-app/main/default/objects/Intervention__c/fields/Escalade_justifie__c.field-meta.xml
<CustomField>
    <fullName>Escalade_justifie__c</fullName>
    <description>@Description: Permet au conseiller de dire si l&apos;escalade est justifié
@Project: Smile</description>
    <inlineHelpText>Préciser si l&apos;escalade était justifiée</inlineHelpText>
    <label>Escalade justifiée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
                <label>Oui - Demande Complète</label>
            </value>
            <value>
                <fullName>Oui - Demande Incomplète</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Traitement BO sans escalade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>