force-app/main/default/objects/Intervention__c/fields/Formulaire__c.field-meta.xml
<CustomField>
    <fullName>Formulaire__c</fullName>
    <description>@Description: Ce champ va être rempli à partir d&apos;OS
@Project: Smile</description>
    <label>Formulaire</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>