force-app/main/default/objects/Intervention__c/fields/Numero_affaire__c.field-meta.xml
<CustomField>
    <fullName>Numero_affaire__c</fullName>
    <description>@Description: Numéro d&apos;affaire d&apos;une intervention
@Project: Smile</description>
    <label>Numéro d&apos;affaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>