force-app/main/default/objects/Intervention__c/fields/Prestataire_du_responsable__c.field-meta.xml
<CustomField>
    <fullName>Prestataire_du_responsable__c</fullName>
    <description>@Description: Champ à récupérer de la fiche utilisateur du owner de l&apos;intervention.
@Project: Smile</description>
    <formula>TEXT(Owner:User.Prestataire__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prestataire du responsable</label>
    <type>Text</type>
</CustomField>