force-app/main/default/objects/Intervention__c/fields/Raison_Escalade__c.field-meta.xml
<CustomField>
    <fullName>Raison_Escalade__c</fullName>
    <description>@Smile : La raison détaillée de l&apos;escalde récupérer du traçage interaction.</description>
    <label>Raison détaillée de l&apos;escalde</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>