force-app/main/default/objects/Intervention__c/fields/Raison_escalade_injustif__c.field-meta.xml
<CustomField>
    <fullName>Raison_escalade_injustif__c</fullName>
    <description>@Description: Raison d&apos;escalade injustifiée
@Project: Smile</description>
    <label>Raison d&apos;escalade injustifiée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valeur 1</fullName>
            </value>
            <value>
                <fullName>Valeur 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>