force-app/main/default/objects/Intervention__c/fields/REP_DMT__c.field-meta.xml
<CustomField>
    <fullName>REP_DMT__c</fullName>
    <description>Renseigne la date et l&apos;heure du jour quand l&apos;intervention passe au statut clôturé.</description>
    <formula>IF(ISPICKVAL( Statut__c , &quot;Clôturé&quot;), NOW(), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REP_DMT</label>
    <type>DateTime</type>
</CustomField>