force-app/main/default/objects/Intervention__c/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <description>@Description: Ce champ complète le Type d&apos;intervention
@Project: Smile</description>
    <label>Sous-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM31</fullName>
                <label>Recherche de règlement</label>
            </value>
            <value>
                <fullName>SM18</fullName>
                <label>Activation manuelle du contrat</label>
            </value>
            <value>
                <fullName>SM19</fullName>
                <label>Anomalie PDL</label>
            </value>
            <value>
                <fullName>SM15</fullName>
                <label>Contrat Ok Symphonie mais pas à la bonne date / bonne puissance / FTA KO</label>
            </value>
            <value>
                <fullName>SM32</fullName>
                <label>Ecarts comptable</label>
            </value>
            <value>
                <fullName>SM09</fullName>
                <label>Ecart sur remboursement</label>
            </value>
            <value>
                <fullName>SM26</fullName>
                <label>Erreur de prix</label>
            </value>
            <value>
                <fullName>SM03</fullName>
                <label>Facture de régularisation absente ou en erreur (problèmes UR, rythme de facturation)</label>
            </value>
            <value>
                <fullName>SM11</fullName>
                <label>Facture incohérente vs GRD ou CPV (problème entre GRD et nos intégrations)</label>
            </value>
            <value>
                <fullName>SM30</fullName>
                <label>J&apos;ai appliqué un mode opératoire mais cela ne fonctionne pas</label>
            </value>
            <value>
                <fullName>SM01</fullName>
                <label>Le client a déjà reçu une facture</label>
            </value>
            <value>
                <fullName>SM23</fullName>
                <label>Le client a été coupé par erreur / il nous alerte d&apos;une inversion PDL/PCE</label>
            </value>
            <value>
                <fullName>SM06</fullName>
                <label>Le client conteste son index</label>
            </value>
            <value>
                <fullName>SM16</fullName>
                <label>Le client est résilié mais recoit toujours des factures</label>
            </value>
            <value>
                <fullName>SM17</fullName>
                <label>Le client n&apos;a jamais reçu de facture et l&apos;OPS de MES est soldée sur le portail distributeur</label>
            </value>
            <value>
                <fullName>SM02</fullName>
                <label>Le client n&apos;a jamais reçu de facture et l&apos;OPS de MES n&apos;est pas soldée sur le portail distributeur</label>
            </value>
            <value>
                <fullName>SM08</fullName>
                <label>Le client n&apos;a pas accès à son suivi de conso et les index ne sont pas intégrés dans l&apos;outil</label>
            </value>
            <value>
                <fullName>SM22</fullName>
                <label>Le client se rétracte et il est déjà facturé</label>
            </value>
            <value>
                <fullName>SM25</fullName>
                <label>Le contrat a été fait sur le mauvais PDL / PCE</label>
            </value>
            <value>
                <fullName>SM14</fullName>
                <label>Le contrat n&apos;est pas répliqué (contrat modif en cours)</label>
            </value>
            <value>
                <fullName>SM24</fullName>
                <label>Le distributeur nous signale une inversion PDL / PCE</label>
            </value>
            <value>
                <fullName>SM05</fullName>
                <label>Les relevés de compteur sont absents dans nos outils</label>
            </value>
            <value>
                <fullName>SM12</fullName>
                <label>Le statut du contrat est en « résiliation en cours » (statut différent des portails et ISU)</label>
            </value>
            <value>
                <fullName>SM29</fullName>
                <label>Mise à jour de commune (SR12)</label>
            </value>
            <value>
                <fullName>SM28</fullName>
                <label>Passage en FTCDS</label>
            </value>
            <value>
                <fullName>SM10</fullName>
                <label>Présence d&apos;un écart entre les factures et les paiements enregistrés</label>
            </value>
            <value>
                <fullName>SM07</fullName>
                <label>Problème sur la transformation de la PC</label>
            </value>
            <value>
                <fullName>SM04</fullName>
                <label>Promo non appliquée</label>
            </value>
            <value>
                <fullName>SM21</fullName>
                <label>Propale création / transformation</label>
            </value>
            <value>
                <fullName>SM20</fullName>
                <label>Regroupement PDL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>