force-app/main/default/objects/Intervention__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <description>@Description: Statut de l&apos;intervention
@Project: Smile</description>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
                <default>true</default>
                <label>Nouveau</label>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>