force-app/main/default/objects/Intervention__c/fields/Suivi_du_traitement__c.field-meta.xml
<CustomField>
    <fullName>Suivi_du_traitement__c</fullName>
    <description>@Description: Statut d&apos;avancement d&apos;une fiche IRIS/Formulaire intrépide
@Project: Smile</description>
    <inlineHelpText>Statut d&apos;avancement d&apos;une fiche IRIS/Formulaire intrépide</inlineHelpText>
    <label>Suivi du traitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valeur 1</fullName>
            </value>
            <value>
                <fullName>Valeur 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>