force-app/main/default/objects/Intervention__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>@Description: Type d&apos;intervention
@Project: Smile</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blocage sur MES/RES/CHO</fullName>
            </value>
            <value>
                <fullName>Contestation d’index distributeur/factures</fullName>
            </value>
            <value>
                <fullName>Inversion PDL</fullName>
            </value>
            <value>
                <fullName>IRIS</fullName>
            </value>
            <value>
                <fullName>Je ne reçois pas mes factures</fullName>
            </value>
            <value>
                <fullName>POC Omni-channel</fullName>
            </value>
            <value>
                <fullName>Rétractation complexe</fullName>
            </value>
            <value>
                <fullName>Situation compte/règlement/remboursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>