force-app/main/default/objects/Intervention__c/validationRules/SM_VR01_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>SM_VR01_Description</fullName>
    <active>true</active>
    <description>@description: Le champ Description doit être obligatoirement rempli.
@projet: Smile</description>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Merci de renseigner le détail de votre intervention.</errorMessage>
</ValidationRule>