force-app/main/default/objects/Intervention__c/validationRules/SM_VR02_Raison_escalade.validationRule-meta.xml
<ValidationRule>
    <fullName>SM_VR02_Raison_escalade</fullName>
    <active>false</active>
    <description>@description: Champ à renseigner dans le cas où l&apos;escalade n&apos;est pas justifiée
@projet: Smile</description>
    <errorConditionFormula>AND(
ISPICKVAL( Escalade_justifie__c , &apos;Non&apos;),
ISBLANK( TEXT( Raison_escalade_injustif__c )))</errorConditionFormula>
    <errorDisplayField>Raison_escalade_injustif__c</errorDisplayField>
    <errorMessage>Merci de renseigner la raison de l&apos;escalade injustifiée.</errorMessage>
</ValidationRule>