force-app/main/default/objects/Intervention__c/validationRules/SM_VR05_Date_OPS.validationRule-meta.xml
<ValidationRule>
    <fullName>SM_VR05_Date_OPS</fullName>
    <active>true</active>
    <description>@description: Le champ Date d&apos;OPS est obligatoire si numéro d&apos;affaire est non vide.
@projet: Smile</description>
    <errorConditionFormula>AND(
ISBLANK(Date_OPS__c),
Not(ISBLANK(Numero_affaire__c)),
$Setup.ByPassSettings__c.ValidationRule__c==false
)</errorConditionFormula>
    <errorDisplayField>Date_OPS__c</errorDisplayField>
    <errorMessage>Merci de renseigner la date de l&apos;OPS.</errorMessage>
</ValidationRule>