force-app/main/default/objects/Intervention__c/validationRules/SM_VR07_Sous_Type_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>SM_VR07_Sous_Type_obligatoire</fullName>
    <active>false</active>
    <description>Le champ &quot;sous-type&quot; est obligatoire lorsque le statut de l&apos;intervention est &quot;clôturé OK&quot; ou &quot;clôturé KO&quot; et le type de l’intervention est “Blocage sur MES/RES/CHO/CHF” ou “Situation compte / règlement/remboursement”</description>
    <errorConditionFormula>AND(ISBLANK(TEXT(Sous_type__c)),OR(ISPICKVAL(Statut__c, &apos;Clôturé&apos;), ISPICKVAL(Statut__c, &apos;Clôturé KO&apos;)),OR(ISPICKVAL(Type__c, &apos;Blocage sur MES/RES/CHO&apos;), ISPICKVAL(Type__c, &apos;Situation compte/règlement/remboursement&apos;)), $Setup.ByPassSettings__c.ValidationRule__c==false)</errorConditionFormula>
    <errorDisplayField>Sous_type__c</errorDisplayField>
    <errorMessage>Merci de renseigner le sous-type de l&apos;intervention.</errorMessage>
</ValidationRule>