force-app/main/default/objects/Intervention__c/listViews/Conseiller_N2_Intervention.listView-meta.xml
<ListView>
    <fullName>Conseiller_N2_Intervention</fullName>
    <filterScope>Queue</filterScope>
    <label>Conseiller N2</label>
    <queue>Conseiller_N2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>