force-app/main/default/objects/Intervention__c/listViews/Conseiller_N3_Intervention.listView-meta.xml
<ListView>
    <fullName>Conseiller_N3_Intervention</fullName>
    <filterScope>Queue</filterScope>
    <label>Conseiller N3</label>
    <queue>Conseiller_N3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>