force-app/main/default/objects/Intervention__c/listViews/Escalade_Genesys_Intervention.listView-meta.xml
<ListView>
    <fullName>Escalade_Genesys_Intervention</fullName>
    <filterScope>Queue</filterScope>
    <label>Escalade Genesys</label>
    <queue>Escalade_Genesys</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>